# qvis

./: .env.example  .gitignore  AUDIT_LOGGING.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  LICENSE  QVIS_EVALUATION_REPORT.md  QVIS_PRODUCTION_VIABILITY_REPORT.md  README.md  SECURITY.md  alembic.ini  docker-compose.yml  fix_alembic.py  fix_config.py  fix_contrib.py  fix_db.py  fix_ensure_snapshot.py  fix_health.py  fix_html.py  fix_indent.py  fix_lifespan.py  fix_main_retention.py  fix_old_imports.py  fix_replace.py  fix_requirements.py  fix_scenarios.py  fix_sqlite.py  fix_template_warning.py  fix_test_alembic.py  fix_test_api.py  fix_test_database_abstraction.py  fix_test_defcon.py  fix_test_fallbacks.py  fix_test_health.py  fix_test_retention.py  fix_tests.py  fix_websocket.py  get_nonce.py  patch_main.py  (+4 more)
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  release.yml  security-ci.yml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_add_resolved_at_to_correlations.py  001_initial_schema.py  __init__.py
backend/: config.py  logging_config.py  main.py  metrics.py
backend/api/: auth.py  export.py  ratelimit.py  security_headers.py  websocket.py
backend/collectors/: aggregator.py  azure_quantum.py  base.py  braket.py  calibrator.py  github_scanner.py  ibm.py  mock.py  scenario.py
backend/security/: audit.py  encryption.py
backend/storage/: __init__.py  base.py  database.py  migrations.py  models.py  postgres_db.py  retention.py  sqlite_db.py
backend/tasks/: retention.py
backend/threat_engine/: analyzer.py  baseline.py  correlator.py  models.py  rules.py
dashboards/: qvis.json
data/: qvis.db  qvis.db-shm  qvis.db-wal
demo/: mock_braket_data.json  mock_ibm_data.json
docs/: ADVERSARIAL_REVIEW.md  QVIS_ARCHITECTURE.md  THREAT_MODEL.md  defcon-demo-script.md  quantum-threat-taxonomy.md  research.md
frontend/: index.html  sw.js
k8s/: deployment.yaml  hpa.yaml  ingress.yaml  service.yaml
scripts/: exhaustive_stress_test.py  record_demo.py  stress_test.py
tests/: conftest.py  test_alembic.py  test_api.py  test_baseline_manager.py  test_chunk12_rbac.py  test_chunk13_redis.py  test_ci.py  test_collectors.py  test_correlator.py  test_database_abstraction.py  test_defcon_hardening.py  test_docs.py  test_e2e.py  test_fallbacks.py  test_github_scanner.py  test_health.py  test_integration_fixes.py  test_logging.py  test_metrics.py  test_multiplatform.py  test_phase1.py  test_phase2.py  test_priority_fixes.py  test_regression_all_fixes.py  test_retention.py  test_rules.py  test_scenario.py  test_security_suite.py  test_simulation_state.py  test_threat_engine.py
(+21 files in other folders)
