[tool.poetry]
name = "qvis"
version = "0.1.0"
description = "Live quantum threat topology visualization engine"
authors = ["QVis Author <author@example.com>"]

[tool.poetry.dependencies]
python = ">=3.11"
fastapi = ">=0.115.0"
uvicorn = {extras = ["standard"], version = ">=0.30.0"}
websockets = ">=12.0"
pydantic = ">=2.0.0"
pydantic-settings = ">=2.0.0"
structlog = ">=24.0.0"
python-dotenv = ">=1.0.0"

[tool.poetry.group.dev.dependencies]
httpx = ">=0.27.0"
pytest = ">=8.0.0"
pytest-asyncio = ">=0.24.0"
playwright = ">=1.40.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
